fixed spacing between the company and year on portfolio pages and adjusted column spacing on the about section on the index

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -109,7 +109,7 @@ h3 {
   font-weight: 600;
   text-transform: uppercase;
   //margin-bottom: 0.5rem;
-  margin: 2rem 0 0.5rem 0;
+  margin: 3rem 0 0.5rem 0;
   line-height: 1.5rem;
 
   &:first-child { margin-top: 0; }
