--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -34,6 +34,10 @@ img.work, #page.work #content img {
       display: inline;
       padding-top: 1rem;
     }
+
+    #year {
+      margin-left: 0.5rem;
+    }
   }
 
   #hero img {
